create swagger docs

--- a/.env.dev
+++ b/.env.dev
@@ -5,6 +5,14 @@ POSTGRES_USER=Admin
 POSTGRES_DB=ecommerce
 POSTGRES_HOST=localhost
 
+
+#TESTING
+POSTGRES_PORT_CONTAINER_TESTING=5432
+POSTGRES_PORT_PC_TESTING=5433
+POSTGRES_PASSWORD_TESTING=root
+POSTGRES_USER_TESTING=Admin
+POSTGRES_DB_TESTING=ecommerce
+POSTGRES_HOST_TESTING=localhost
 #PGADMIN
 
 PGADMIN_DEFAULT_EMAIL=uncorreo@undominio.com
