New refactory in application , whit configutarion advanced for modes development , testing and production

--- a/.env.dev
+++ b/.env.dev
@@ -1,18 +1,11 @@
-POSTGRES_PORT_CONTAINER=5432
-POSTGRES_PORT_PC=5432
-POSTGRES_PASSWORD=root
-POSTGRES_USER=Admin
-POSTGRES_DB=ecommerce
-POSTGRES_HOST=localhost
+POSTGRES_PORT_CONTAINER_DEV=5432
+POSTGRES_PORT_PC_DEV=5432
+POSTGRES_PASSWORD_DEV=root
+POSTGRES_USER_DEV=Admin
+POSTGRES_DB_DEV=ecommerce_dev
+POSTGRES_HOST_DEV=localhost
 
 
-#TESTING
-POSTGRES_PORT_CONTAINER_TESTING=5432
-POSTGRES_PORT_PC_TESTING=5433
-POSTGRES_PASSWORD_TESTING=root
-POSTGRES_USER_TESTING=Admin
-POSTGRES_DB_TESTING=ecommerce
-POSTGRES_HOST_TESTING=localhost
 #PGADMIN
 
 PGADMIN_DEFAULT_EMAIL=uncorreo@undominio.com
