--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,14 +6,34 @@ services:
     container_name: psql-dev
     restart: always
     ports:
-      - ${POSTGRES_PORT_PC}:${POSTGRES_PORT_CONTAINER}
+      - ${POSTGRES_PORT_PC_DEV}:${POSTGRES_PORT_CONTAINER_DEV}
     environment:
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD_DEV}
+      POSTGRES_USER: ${POSTGRES_USER_DEV}
+      POSTGRES_DB: ${POSTGRES_DB_DEV}
 
-  
-      
+  psql-testing:
+    image: postgres
+    container_name: psql-testing
+    restart: always
+    ports:
+      - ${POSTGRES_PORT_PC_TEST}:${POSTGRES_PORT_CONTAINER_TEST}
+    environment:
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD_TEST}
+      POSTGRES_USER: ${POSTGRES_USER_TEST}
+      POSTGRES_DB: ${POSTGRES_DB_TEST}
+
+  psql-prod:
+    image: postgres
+    container_name: psql-prod
+    restart: always
+    ports:
+      - ${POSTGRES_PORT_PC_PROD}:${POSTGRES_PORT_CONTAINER_PROD}
+    environment:
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD_PROD}
+      POSTGRES_USER: ${POSTGRES_USER_PROD}
+      POSTGRES_DB: ${POSTGRES_DB_PROD}
+        
   pgadmin4:
     image: dpage/pgadmin4
     restart: always
