--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "products",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Jocs",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "NODE_ENV=developer nest start --watch",
+    "start": "NODE_ENV=production nest start",
+    "start:dev": "NODE_ENV=development nest start --watch",
     "start:debug": "NODE_ENV=testing nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
